# EECSGE

./: .gitmodules  CMakeLists.txt  README.md
EECSGE/: CMakeLists.txt  EECSGE.hpp
EECSGE/Audio/: CMakeLists.txt
EECSGE/Audio/components/: sound.hpp
EECSGE/Audio/include/: Audio.hpp
EECSGE/Audio/include/EECSGE/: Audio.hpp
EECSGE/Audio/systems/include/: sound.hpp
EECSGE/Audio/systems/src/: sound.cpp
EECSGE/Core/: CMakeLists.txt
EECSGE/Core/include/: Core.hpp
EECSGE/Core/include/EECSGE/: Core.hpp
EECSGE/Core/src/: ComponentManager.hpp  Coordinator.hpp  EntityManager.hpp  Event.hpp  EventManager.hpp  IComponentArray.hpp  System.hpp  SystemManager.hpp  Types.hpp
EECSGE/Graphics/: CMakeLists.txt
EECSGE/Graphics/components/: drawable.hpp
EECSGE/Graphics/include/: Graphics.hpp
EECSGE/Graphics/include/EECSGE/: Graphics.hpp
EECSGE/Graphics/systems/include/: animation.hpp  draw.hpp
EECSGE/Graphics/systems/src/: animation.cpp  draw.cpp
EECSGE/Physics/: CMakeLists.txt
EECSGE/Physics/components/: rigidBody.hpp
EECSGE/Physics/include/: Physics.hpp
EECSGE/Physics/include/EECSGE/: Physics.hpp
EECSGE/components/: Components.hpp  components.hpp  health.hpp  movement.hpp  rigidBody.hpp  sound.hpp
EECSGE/core/: Core.hpp
EECSGE/core/include/: ComponentManager.hpp  Coordinator.hpp  EntityManager.hpp  SystemManager.hpp  Types.hpp
EECSGE/core/src/: ComponentManager.cpp  Coordinator.cpp  EntityManager.cpp  SystemManager.cpp
EECSGE/events/: collision.hpp
EECSGE/systems/: Systems.hpp
EECSGE/systems/include/: animation.hpp  background.hpp  collision.hpp  death.hpp  drawable.hpp  movement.hpp  player.hpp  sound.hpp
EECSGE/systems/src/: animation.cpp  background.cpp  collision.cpp  death.cpp  draw.cpp  drawable.cpp  movement.cpp  player.cpp  sound.cpp
src/components/: collision.hpp  drawable.hpp  input.hpp  transform.hpp
src/core/include/: IComponentArray.hpp  System.hpp  SystemManager.hpp
src/core/src/: ComponentManager.cpp  Coordinator.cpp  EntityManager.cpp  SystemManager.cpp
src/systems/include/: animation.hpp  background.hpp  collision.hpp  death.hpp  drawable.hpp  movement.hpp  player.hpp  sound.hpp
src/systems/src/: animation.cpp  background.cpp  collision.cpp  death.cpp  drawable.cpp  movement.cpp  player.cpp  sound.cpp
tests/: CMakeLists.txt  animation_tests.cpp  main.cpp  system_tests.cpp
